SoftwareEngineeringAssignment2/compiling_error.txt
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\main.c: In function 'main':
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\main.c:27:3: error: expected declaration specifiers before 'return'
   return 0;
   ^~~~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\main.c:28:1: error: expected declaration specifiers before '}' token
 }
 ^
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\main.c:23:5: error: old-style parameter declarations in prototyped function definition
 int main(void)
     ^~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\main.c:28:1: error: expected '{' at end of input
 }
 ^
